--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,12 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.list-group-item a:link, .list-group-item a:active, .list-group-item a:visited, .list-group-item a:hover {
+    text-decoration: none;
+    color: #000;
+}
+.list-group-item a:hover {
+    color: burlywood;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.list-group-item a.active {
+    font-weight: bold;
+    text-shadow: 0px 0px 2px #000;
 }
